# sc

./: .gitignore  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  main.cc
src/google/protobuf/compiler/sc/: sc_generator.h  sc_helpers.cc  sc_helpers.h
src/google/protobuf/compiler/sc/python/: client_generator.cc  client_init.cc  client_lib.cc  client_setup.cc  generator.h  implementation.cc  server_generator.cc  server_implementation.cc  server_main.cc  server_setup.cc  service_generator.cc
