bin_PROGRAMS = sc
sc_SOURCES = main.cc \
			 google/protobuf/compiler/sc/sc_generator.h \
			 google/protobuf/compiler/sc/sc_helpers.h \
			 google/protobuf/compiler/sc/sc_helpers.cc \
			 google/protobuf/compiler/sc/python/generator.h \
			 google/protobuf/compiler/sc/python/server_generator.cc \
			 google/protobuf/compiler/sc/python/server_main.cc \
			 google/protobuf/compiler/sc/python/server_implementation.cc \
			 google/protobuf/compiler/sc/python/server_setup.cc \
			 google/protobuf/compiler/sc/python/client_generator.cc \
			 google/protobuf/compiler/sc/python/client_init.cc \
			 google/protobuf/compiler/sc/python/client_setup.cc \
			 google/protobuf/compiler/sc/python/client_lib.cc
sc_LDADD = -lprotoc -lprotobuf -lpthread
